myK8S/glance/glance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:latest
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: glance-storage
              mountPath: /app/config
              subPath: config
            - name: glance-storage
              mountPath: /app/assets
              subPath: assets
            - name: glance-storage
              mountPath: /app/data
              subPath: data
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: glance-storage
          persistentVolumeClaim:
            claimName: glance-unified-pvc
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
