myK8S/glance/glance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-svc
  namespace: personal
spec:
  selector:
    app: glance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
